# sparkify-data-modelling

./: .gitignore  README.md  pyproject.toml
src/: main.ipynb
